# davinci-resolve-mcp

./: .gitignore  LICENSE  README.md  davinci-resolve-mcp.skill  find_sounds_fast.py  pyproject.toml
skill/davinci-resolve-mcp/: SKILL.md
skill/davinci-resolve-mcp/references/: ffmpeg_workflows.md  fusion_tools.md  render_settings.md  workflows.md
src/davinci_resolve_mcp/: __init__.py  __main__.py  constants.py  models.py  resolve_connection.py  server.py
src/davinci_resolve_mcp/tools/: __init__.py  color_group.py  folder.py  fusion_comp.py  fusion_flow.py  fusion_input.py  fusion_misc.py  fusion_output.py  fusion_spline.py  fusion_tool.py  gallery.py  graph.py  media_pool.py  media_pool_item.py  media_storage.py  project.py  project_manager.py  resolve.py  timeline.py  timeline_item.py  utility.py
